<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <EditText
        android:id="@+id/body_key"
        android:imeOptions="flagNoExtractUi|actionNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/key"
        android:inputType="text|textCapSentences" />

    <EditText
        android:id="@+id/body_value"
        android:imeOptions="flagNoExtractUi|actionNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/value"
        android:inputType="text|textCapSentences"
        android:singleLine="true" />

    <ImageButton
        android:id="@+id/action_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/remove_query_parameter_description"
        android:src="@drawable/ic_add_24px"
        android:background="@color/colorTransparent"
        android:layout_gravity="center"
        android:tag="add" />
</LinearLayout>